{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 244,
  "lineage": "dac768e0-4f70-9c26-64fc-39a890a4b939",
  "resources": [
    {
      "module": "module.compute_nodes",
      "mode": "managed",
      "type": "aws_instance",
      "name": "compute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06435bc8a2c0a8e5a",
            "arn": "arn:aws:ec2:us-west-2:942542972736:instance/i-008a751481d722ade",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-008a751481d722ade",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m7a.large",
            "ipv6_address_count": 0,
            "key_name": "burstlab-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02a21bf82dda71ce7",
            "private_dns": "ip-10-0-1-10.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Generation": "gen1",
                  "ManagedBy": "terraform",
                  "Name": "burstlab-gen1-compute01-root",
                  "Project": "burstlab"
                },
                "tags_all": {
                  "Generation": "gen1",
                  "ManagedBy": "terraform",
                  "Name": "burstlab-gen1-compute01-root",
                  "Project": "burstlab"
                },
                "throughput": 125,
                "volume_id": "vol-015aa8e5c11b99615",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a62de49fa1420ecc",
            "tags": {
              "Generation": "gen1",
              "ManagedBy": "terraform",
              "Name": "burstlab-gen1-compute01",
              "NodeIndex": "1",
              "Project": "burstlab",
              "Role": "compute-node"
            },
            "tags_all": {
              "Generation": "gen1",
              "ManagedBy": "terraform",
              "Name": "burstlab-gen1-compute01",
              "NodeIndex": "1",
              "Project": "burstlab",
              "Role": "compute-node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0f29d43109b62ca96"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.shared_storage.aws_efs_access_point.home",
            "module.shared_storage.aws_efs_access_point.slurm",
            "module.shared_storage.aws_efs_file_system.main",
            "module.vpc.aws_security_group.compute_node",
            "module.vpc.aws_subnet.onprem",
            "module.vpc.aws_vpc.main",
            "random_bytes.munge_key"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06435bc8a2c0a8e5a",
            "arn": "arn:aws:ec2:us-west-2:942542972736:instance/i-0de685c5d49b65fa1",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0de685c5d49b65fa1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m7a.large",
            "ipv6_address_count": 0,
            "key_name": "burstlab-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07cbe35106e3bbe13",
            "private_dns": "ip-10-0-1-11.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Generation": "gen1",
                  "ManagedBy": "terraform",
                  "Name": "burstlab-gen1-compute02-root",
                  "Project": "burstlab"
                },
                "tags_all": {
                  "Generation": "gen1",
                  "ManagedBy": "terraform",
                  "Name": "burstlab-gen1-compute02-root",
                  "Project": "burstlab"
                },
                "throughput": 125,
                "volume_id": "vol-0cf6bf1ae9293ac98",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a62de49fa1420ecc",
            "tags": {
              "Generation": "gen1",
              "ManagedBy": "terraform",
              "Name": "burstlab-gen1-compute02",
              "NodeIndex": "2",
              "Project": "burstlab",
              "Role": "compute-node"
            },
            "tags_all": {
              "Generation": "gen1",
              "ManagedBy": "terraform",
              "Name": "burstlab-gen1-compute02",
              "NodeIndex": "2",
              "Project": "burstlab",
              "Role": "compute-node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0f29d43109b62ca96"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.shared_storage.aws_efs_access_point.home",
            "module.shared_storage.aws_efs_access_point.slurm",
            "module.shared_storage.aws_efs_file_system.main",
            "module.vpc.aws_security_group.compute_node",
            "module.vpc.aws_subnet.onprem",
            "module.vpc.aws_vpc.main",
            "random_bytes.munge_key"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06435bc8a2c0a8e5a",
            "arn": "arn:aws:ec2:us-west-2:942542972736:instance/i-0b6600c699a6fb8a8",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b6600c699a6fb8a8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m7a.large",
            "ipv6_address_count": 0,
            "key_name": "burstlab-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03c6e3a1f246d06fe",
            "private_dns": "ip-10-0-1-12.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.12",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Generation": "gen1",
                  "ManagedBy": "terraform",
                  "Name": "burstlab-gen1-compute03-root",
                  "Project": "burstlab"
                },
                "tags_all": {
                  "Generation": "gen1",
                  "ManagedBy": "terraform",
                  "Name": "burstlab-gen1-compute03-root",
                  "Project": "burstlab"
                },
                "throughput": 125,
                "volume_id": "vol-08de40b52e8e6cfb1",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a62de49fa1420ecc",
            "tags": {
              "Generation": "gen1",
              "ManagedBy": "terraform",
              "Name": "burstlab-gen1-compute03",
              "NodeIndex": "3",
              "Project": "burstlab",
              "Role": "compute-node"
            },
            "tags_all": {
              "Generation": "gen1",
              "ManagedBy": "terraform",
              "Name": "burstlab-gen1-compute03",
              "NodeIndex": "3",
              "Project": "burstlab",
              "Role": "compute-node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0f29d43109b62ca96"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.shared_storage.aws_efs_access_point.home",
            "module.shared_storage.aws_efs_access_point.slurm",
            "module.shared_storage.aws_efs_file_system.main",
            "module.vpc.aws_security_group.compute_node",
            "module.vpc.aws_subnet.onprem",
            "module.vpc.aws_vpc.main",
            "random_bytes.munge_key"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06435bc8a2c0a8e5a",
            "arn": "arn:aws:ec2:us-west-2:942542972736:instance/i-09ddbbf6b2cfd5a56",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09ddbbf6b2cfd5a56",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m7a.large",
            "ipv6_address_count": 0,
            "key_name": "burstlab-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02a5a4f6fa0e04cb5",
            "private_dns": "ip-10-0-1-13.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.13",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Generation": "gen1",
                  "ManagedBy": "terraform",
                  "Name": "burstlab-gen1-compute04-root",
                  "Project": "burstlab"
                },
                "tags_all": {
                  "Generation": "gen1",
                  "ManagedBy": "terraform",
                  "Name": "burstlab-gen1-compute04-root",
                  "Project": "burstlab"
                },
                "throughput": 125,
                "volume_id": "vol-026447e18499efbdb",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a62de49fa1420ecc",
            "tags": {
              "Generation": "gen1",
              "ManagedBy": "terraform",
              "Name": "burstlab-gen1-compute04",
              "NodeIndex": "4",
              "Project": "burstlab",
              "Role": "compute-node"
            },
            "tags_all": {
              "Generation": "gen1",
              "ManagedBy": "terraform",
              "Name": "burstlab-gen1-compute04",
              "NodeIndex": "4",
              "Project": "burstlab",
              "Role": "compute-node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0f29d43109b62ca96"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.shared_storage.aws_efs_access_point.home",
            "module.shared_storage.aws_efs_access_point.slurm",
            "module.shared_storage.aws_efs_file_system.main",
            "module.vpc.aws_security_group.compute_node",
            "module.vpc.aws_subnet.onprem",
            "module.vpc.aws_vpc.main",
            "random_bytes.munge_key"
          ]
        }
      ]
    },
    {
      "module": "module.head_node",
      "mode": "managed",
      "type": "aws_eip",
      "name": "head_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07983584c68d33085",
            "arn": "arn:aws:ec2:us-west-2:942542972736:elastic-ip/eipalloc-07983584c68d33085",
            "association_id": "eipassoc-071b6ce5b8048c64f",
            "domain": "vpc",
            "id": "eipalloc-07983584c68d33085",
            "instance": "i-0b6d954e077ae8d54",
            "network_border_group": "us-west-2",
            "network_interface": "eni-012b6e089b9e3fcef",
            "private_dns": "ip-10-0-0-10.us-west-2.compute.internal",
            "private_ip": "10.0.0.10",
            "public_dns": "ec2-52-33-58-129.us-west-2.compute.amazonaws.com",
            "public_ip": "52.33.58.129",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Generation": "gen1",
              "ManagedBy": "terraform",
              "Name": "burstlab-gen1-head-node-eip",
              "Project": "burstlab"
            },
            "tags_all": {
              "Generation": "gen1",
              "ManagedBy": "terraform",
              "Name": "burstlab-gen1-head-node-eip",
              "Project": "burstlab"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.head_node",
      "mode": "managed",
      "type": "aws_instance",
      "name": "head_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06435bc8a2c0a8e5a",
            "arn": "arn:aws:ec2:us-west-2:942542972736:instance/i-09c3ff5eeae394d5d",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "burstlab-gen1-head-node-profile",
            "id": "i-09c3ff5eeae394d5d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m7a.large",
            "ipv6_address_count": 0,
            "key_name": "burstlab-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0090d5237ed5b7f1f",
            "private_dns": "ip-10-0-0-10.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Generation": "gen1",
                  "ManagedBy": "terraform",
                  "Name": "burstlab-gen1-head-node-root",
                  "Project": "burstlab"
                },
                "tags_all": {
                  "Generation": "gen1",
                  "ManagedBy": "terraform",
                  "Name": "burstlab-gen1-head-node-root",
                  "Project": "burstlab"
                },
                "throughput": 125,
                "volume_id": "vol-034a82f36a25df529",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-08d4e15f68b94671d",
            "tags": {
              "Generation": "gen1",
              "ManagedBy": "terraform",
              "Name": "burstlab-gen1-head-node",
              "Project": "burstlab",
              "Role": "head-node"
            },
            "tags_all": {
              "Generation": "gen1",
              "ManagedBy": "terraform",
              "Name": "burstlab-gen1-head-node",
              "Project": "burstlab",
              "Role": "head-node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0c33bc2d7c5e63bad"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data_base64"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.burst_config.aws_launch_template.burst",
            "module.iam.aws_iam_instance_profile.burst_node",
            "module.iam.aws_iam_instance_profile.head_node",
            "module.iam.aws_iam_role.burst_node",
            "module.iam.aws_iam_role.head_node",
            "module.iam.data.aws_iam_policy_document.burst_node_assume_role",
            "module.iam.data.aws_iam_policy_document.head_node_assume_role",
            "module.shared_storage.aws_efs_access_point.home",
            "module.shared_storage.aws_efs_access_point.slurm",
            "module.shared_storage.aws_efs_file_system.main",
            "module.vpc.aws_security_group.burst_node",
            "module.vpc.aws_security_group.head_node",
            "module.vpc.aws_subnet.cloud_a",
            "module.vpc.aws_subnet.cloud_b",
            "module.vpc.aws_subnet.management",
            "module.vpc.aws_subnet.onprem",
            "module.vpc.aws_vpc.main",
            "random_bytes.munge_key",
            "random_password.slurmdbd_db"
          ]
        }
      ]
    },
    {
      "module": "module.head_node",
      "mode": "managed",
      "type": "aws_route",
      "name": "cloud_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f1d724b0e7aaa3631080289494",
            "instance_id": "i-09c3ff5eeae394d5d",
            "instance_owner_id": "942542972736",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-0090d5237ed5b7f1f",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f1d724b0e7aaa363",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.burst_config.aws_launch_template.burst",
            "module.head_node.aws_instance.head_node",
            "module.iam.aws_iam_instance_profile.burst_node",
            "module.iam.aws_iam_instance_profile.head_node",
            "module.iam.aws_iam_role.burst_node",
            "module.iam.aws_iam_role.head_node",
            "module.iam.data.aws_iam_policy_document.burst_node_assume_role",
            "module.iam.data.aws_iam_policy_document.head_node_assume_role",
            "module.shared_storage.aws_efs_access_point.home",
            "module.shared_storage.aws_efs_access_point.slurm",
            "module.shared_storage.aws_efs_file_system.main",
            "module.vpc.aws_route_table.cloud",
            "module.vpc.aws_security_group.burst_node",
            "module.vpc.aws_security_group.head_node",
            "module.vpc.aws_subnet.cloud_a",
            "module.vpc.aws_subnet.cloud_b",
            "module.vpc.aws_subnet.management",
            "module.vpc.aws_subnet.onprem",
            "module.vpc.aws_vpc.main",
            "random_bytes.munge_key",
            "random_password.slurmdbd_db"
          ]
        }
      ]
    },
    {
      "module": "module.head_node",
      "mode": "managed",
      "type": "aws_route",
      "name": "onprem_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f296139c4fe3b7d71080289494",
            "instance_id": "i-09c3ff5eeae394d5d",
            "instance_owner_id": "942542972736",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-0090d5237ed5b7f1f",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f296139c4fe3b7d7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.burst_config.aws_launch_template.burst",
            "module.head_node.aws_instance.head_node",
            "module.iam.aws_iam_instance_profile.burst_node",
            "module.iam.aws_iam_instance_profile.head_node",
            "module.iam.aws_iam_role.burst_node",
            "module.iam.aws_iam_role.head_node",
            "module.iam.data.aws_iam_policy_document.burst_node_assume_role",
            "module.iam.data.aws_iam_policy_document.head_node_assume_role",
            "module.shared_storage.aws_efs_access_point.home",
            "module.shared_storage.aws_efs_access_point.slurm",
            "module.shared_storage.aws_efs_file_system.main",
            "module.vpc.aws_route_table.onprem",
            "module.vpc.aws_security_group.burst_node",
            "module.vpc.aws_security_group.head_node",
            "module.vpc.aws_subnet.cloud_a",
            "module.vpc.aws_subnet.cloud_b",
            "module.vpc.aws_subnet.management",
            "module.vpc.aws_subnet.onprem",
            "module.vpc.aws_vpc.main",
            "random_bytes.munge_key",
            "random_password.slurmdbd_db"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:942542972736:internet-gateway/igw-0adab289ee9e67e6c",
            "id": "igw-0adab289ee9e67e6c",
            "owner_id": "942542972736",
            "tags": {
              "Generation": "gen1",
              "ManagedBy": "terraform",
              "Name": "burstlab-gen1-igw",
              "Project": "burstlab"
            },
            "tags_all": {
              "Generation": "gen1",
              "ManagedBy": "terraform",
              "Name": "burstlab-gen1-igw",
              "Project": "burstlab"
            },
            "vpc_id": "vpc-0f0c65ebe9bbe0cfd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:942542972736:route-table/rtb-0f1d724b0e7aaa363",
            "id": "rtb-0f1d724b0e7aaa363",
            "owner_id": "942542972736",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-012b6e089b9e3fcef",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Generation": "gen1",
              "ManagedBy": "terraform",
              "Name": "burstlab-gen1-cloud-rtb",
              "Project": "burstlab"
            },
            "tags_all": {
              "Generation": "gen1",
              "ManagedBy": "terraform",
              "Name": "burstlab-gen1-cloud-rtb",
              "Project": "burstlab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0c65ebe9bbe0cfd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "management",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:942542972736:route-table/rtb-0bc0c3c40a5d95608",
            "id": "rtb-0bc0c3c40a5d95608",
            "owner_id": "942542972736",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0adab289ee9e67e6c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Generation": "gen1",
              "ManagedBy": "terraform",
              "Name": "burstlab-gen1-mgmt-rtb",
              "Project": "burstlab"
            },
            "tags_all": {
              "Generation": "gen1",
              "ManagedBy": "terraform",
              "Name": "burstlab-gen1-mgmt-rtb",
              "Project": "burstlab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0c65ebe9bbe0cfd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "onprem",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:942542972736:route-table/rtb-0f296139c4fe3b7d7",
            "id": "rtb-0f296139c4fe3b7d7",
            "owner_id": "942542972736",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-012b6e089b9e3fcef",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Generation": "gen1",
              "ManagedBy": "terraform",
              "Name": "burstlab-gen1-onprem-rtb",
              "Project": "burstlab"
            },
            "tags_all": {
              "Generation": "gen1",
              "ManagedBy": "terraform",
              "Name": "burstlab-gen1-onprem-rtb",
              "Project": "burstlab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0c65ebe9bbe0cfd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cloud_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04828898710a7e018",
            "route_table_id": "rtb-0f1d724b0e7aaa363",
            "subnet_id": "subnet-03176617cf4794a19"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.cloud",
            "module.vpc.aws_subnet.cloud_a",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cloud_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de5f8ac63f05c774",
            "route_table_id": "rtb-0f1d724b0e7aaa363",
            "subnet_id": "subnet-011cff219a70f0996"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.cloud",
            "module.vpc.aws_subnet.cloud_b",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "management",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040f6770de8ab112d",
            "route_table_id": "rtb-0bc0c3c40a5d95608",
            "subnet_id": "subnet-08d4e15f68b94671d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.management",
            "module.vpc.aws_subnet.management",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "onprem",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048e0160ac16ec67e",
            "route_table_id": "rtb-0f296139c4fe3b7d7",
            "subnet_id": "subnet-0a62de49fa1420ecc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.onprem",
            "module.vpc.aws_subnet.onprem",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "burst_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:942542972736:security-group/sg-0afcbecb73226db6d",
            "description": "Cloud burst nodes: all VPC traffic only, internet via head-node NAT",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound - goes through head node NAT for external access",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0afcbecb73226db6d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "All traffic from VPC - Slurmd, Munge, EFS, srun I/O",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "burstlab-gen1-burst-node-sg",
            "name_prefix": "",
            "owner_id": "942542972736",
            "revoke_rules_on_delete": false,
            "tags": {
              "Generation": "gen1",
              "ManagedBy": "terraform",
              "Name": "burstlab-gen1-burst-node-sg",
              "Project": "burstlab"
            },
            "tags_all": {
              "Generation": "gen1",
              "ManagedBy": "terraform",
              "Name": "burstlab-gen1-burst-node-sg",
              "Project": "burstlab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0c65ebe9bbe0cfd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "compute_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:942542972736:security-group/sg-0f29d43109b62ca96",
            "description": "On-prem compute nodes: all VPC traffic only (no public ingress)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound - internet via head node NAT for yum/updates",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f29d43109b62ca96",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "All traffic from VPC - Slurmd (6818), Munge, EFS, job I/O",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "burstlab-gen1-compute-node-sg",
            "name_prefix": "",
            "owner_id": "942542972736",
            "revoke_rules_on_delete": false,
            "tags": {
              "Generation": "gen1",
              "ManagedBy": "terraform",
              "Name": "burstlab-gen1-compute-node-sg",
              "Project": "burstlab"
            },
            "tags_all": {
              "Generation": "gen1",
              "ManagedBy": "terraform",
              "Name": "burstlab-gen1-compute-node-sg",
              "Project": "burstlab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0c65ebe9bbe0cfd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:942542972736:security-group/sg-0886217e482d24c93",
            "description": "EFS mount targets: NFS (2049) from VPC CIDR only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound (standard AWS SG requirement, EFS does not initiate connections)",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0886217e482d24c93",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "NFS from VPC - all nodes mount EFS for /home and /opt/slurm",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "burstlab-gen1-efs-sg",
            "name_prefix": "",
            "owner_id": "942542972736",
            "revoke_rules_on_delete": false,
            "tags": {
              "Generation": "gen1",
              "ManagedBy": "terraform",
              "Name": "burstlab-gen1-efs-sg",
              "Project": "burstlab"
            },
            "tags_all": {
              "Generation": "gen1",
              "ManagedBy": "terraform",
              "Name": "burstlab-gen1-efs-sg",
              "Project": "burstlab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0c65ebe9bbe0cfd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "head_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:942542972736:security-group/sg-0c33bc2d7c5e63bad",
            "description": "Head node: SSH from internet + all VPC traffic for Slurm/Munge/EFS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound - AWS API, yum repos, EFS, internet for updates",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c33bc2d7c5e63bad",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere - lab access (restrict in production)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "All traffic from within VPC - Slurm (6817/6818/6819), Munge (no fixed port), EFS (2049), srun forwarding",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "burstlab-gen1-head-node-sg",
            "name_prefix": "",
            "owner_id": "942542972736",
            "revoke_rules_on_delete": false,
            "tags": {
              "Generation": "gen1",
              "ManagedBy": "terraform",
              "Name": "burstlab-gen1-head-node-sg",
              "Project": "burstlab"
            },
            "tags_all": {
              "Generation": "gen1",
              "ManagedBy": "terraform",
              "Name": "burstlab-gen1-head-node-sg",
              "Project": "burstlab"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0c65ebe9bbe0cfd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloud_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:942542972736:subnet/subnet-03176617cf4794a19",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03176617cf4794a19",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "942542972736",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Generation": "gen1",
              "ManagedBy": "terraform",
              "Name": "burstlab-gen1-cloud-a-subnet",
              "Project": "burstlab",
              "Role": "cloud-burst"
            },
            "tags_all": {
              "Generation": "gen1",
              "ManagedBy": "terraform",
              "Name": "burstlab-gen1-cloud-a-subnet",
              "Project": "burstlab",
              "Role": "cloud-burst"
            },
            "vpc_id": "vpc-0f0c65ebe9bbe0cfd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cloud_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:942542972736:subnet/subnet-011cff219a70f0996",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011cff219a70f0996",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "942542972736",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Generation": "gen1",
              "ManagedBy": "terraform",
              "Name": "burstlab-gen1-cloud-b-subnet",
              "Project": "burstlab",
              "Role": "cloud-burst"
            },
            "tags_all": {
              "Generation": "gen1",
              "ManagedBy": "terraform",
              "Name": "burstlab-gen1-cloud-b-subnet",
              "Project": "burstlab",
              "Role": "cloud-burst"
            },
            "vpc_id": "vpc-0f0c65ebe9bbe0cfd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "management",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:942542972736:subnet/subnet-08d4e15f68b94671d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d4e15f68b94671d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "942542972736",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Generation": "gen1",
              "ManagedBy": "terraform",
              "Name": "burstlab-gen1-mgmt-subnet",
              "Project": "burstlab",
              "Role": "management"
            },
            "tags_all": {
              "Generation": "gen1",
              "ManagedBy": "terraform",
              "Name": "burstlab-gen1-mgmt-subnet",
              "Project": "burstlab",
              "Role": "management"
            },
            "vpc_id": "vpc-0f0c65ebe9bbe0cfd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "onprem",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:942542972736:subnet/subnet-0a62de49fa1420ecc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a62de49fa1420ecc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "942542972736",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Generation": "gen1",
              "ManagedBy": "terraform",
              "Name": "burstlab-gen1-onprem-subnet",
              "Project": "burstlab",
              "Role": "onprem-compute"
            },
            "tags_all": {
              "Generation": "gen1",
              "ManagedBy": "terraform",
              "Name": "burstlab-gen1-onprem-subnet",
              "Project": "burstlab",
              "Role": "onprem-compute"
            },
            "vpc_id": "vpc-0f0c65ebe9bbe0cfd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:942542972736:vpc/vpc-0f0c65ebe9bbe0cfd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06df60c84056d19d4",
            "default_route_table_id": "rtb-044fc71716780ea8d",
            "default_security_group_id": "sg-066a51c273085941c",
            "dhcp_options_id": "dopt-09e19171",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f0c65ebe9bbe0cfd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-044fc71716780ea8d",
            "owner_id": "942542972736",
            "tags": {
              "Generation": "gen1",
              "ManagedBy": "terraform",
              "Name": "burstlab-gen1-vpc",
              "Project": "burstlab"
            },
            "tags_all": {
              "Generation": "gen1",
              "ManagedBy": "terraform",
              "Name": "burstlab-gen1-vpc",
              "Project": "burstlab"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}